--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <style>
+        body{
         background-image:url(bg.svg); 
+        }
     </style>
     <div class="container">
         <div id="container3D"></div>
